--- a/current_config.ini
+++ b/current_config.ini
@@ -10,6 +10,8 @@ Analysis Le. = https://canvas.elte.hu/courses/42419 |
 Analysis Pr. = https://canvas.elte.hu/courses/41295 | 
 Discrete Mathematics Le. = https://canvas.elte.hu/courses/43472 | 
 Discrete Mathematics Pr. = https://canvas.elte.hu/courses/43405 | 
-Programming Languages Le. & Pr. = https://canvas.elte.hu/courses/44028 | 
+Programming Languages Le. & Pr. = https://canvas.elte.hu/courses/44028 | https://canvas.elte.hu/courses/42977 | 
+Programming Lanuages Pr. = https://ikelte.sharepoint.com/sites/23-242BasicJava |
 Algorithms & Data Structures Pr. = https://canvas.elte.hu/courses/43720 | 
+
 
