--- a/current_config.ini
+++ b/current_config.ini
@@ -13,5 +13,10 @@ Discrete Mathematics Pr. = https://canvas.elte.hu/courses/43405 |
 Programming Languages Le. & Pr. = https://canvas.elte.hu/courses/44028 | https://canvas.elte.hu/courses/42977 | 
 Programming Lanuages Pr. = https://ikelte.sharepoint.com/sites/23-242BasicJava |
 Algorithms & Data Structures Pr. = https://canvas.elte.hu/courses/43720 | 
+Python Le. = https://canvas.elte.hu/courses/43587 |
+Python Pr. = https://canvas.elte.hu/courses/43643 |
+OPP Pr. = https://ikelte.sharepoint.com/sites/OOP24 |
+OPP Le. = https://canvas.elte.hu/courses/42720 |
+
 
 
